downgrade to Java 21, split GlBuffer, render triangle using Gl primitives wrapped in Java classes, added Camera + rotate camera around triangle textured as oak leaf